schema/testdata/errors/expression_in_array.keel
model Post {
    fields {
        authors Author[]
    }

    @permission(
        //expect-error:27:29:AttributeExpressionError:cannot use operator 'in' with types Text and Number[]
        expression: "bob" in post.authors.name,
        actions: [get]
    )
}

model Author {
    fields {
        name Number
        post Post
    }
}
